<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2018 Kantega AS
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.kantega.reststop</groupId>
    <artifactId>reststop-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Reststop</name>
    <description>Modular, fast-feedback development for Java web application</description>

    <url>https://github.com/nvdb-vegdata/reststop</url>

    <licenses>
        <license>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <name>Apache License Version 2.0</name>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/nvdb-vegdata/reststop</url>
        <connection>scm:git:git@github.com:nvdb-vegdata/reststop.git</connection>
        <tag>reststop-parent-4.0-SNAPSHOT</tag>
    </scm>

    <properties>
        <revision>4.0.0-SNAPSHOT</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jersey.version>3.1.6</jersey.version>
        <jetty.version>12.0.9</jetty.version><!-- Also defined in template-plugin-webapp-pom.xml -->
        <maven.version>3.9.6</maven.version>
        <maven-deploy-plugin.version>3.1.2</maven-deploy-plugin.version>
        <aether.version>1.0.0.v20140518</aether.version> <!-- TODO: maybe replace with https://maven.apache.org/resolver/ -->
        <jexmec.version>2.0.0rc8</jexmec.version>
        <logback.version>1.1.2</logback.version>
        <slf4j.version>1.7.7</slf4j.version>
        <jakarta-servlet.version>6.0.0</jakarta-servlet.version><!-- Also defined in template-plugin-plugins-pom.xml -->
        <jakarta-annotation.version>3.0.0</jakarta-annotation.version>
        <jakarta-validation.version>3.0.2</jakarta-validation.version>
    </properties>


    <modules>
        <module>classloader-utils</module>
        <module>annotation-processor</module>
        <module>api</module>
        <module>servlet-api</module>
        <module>core</module>
        <module>servlet</module>
        <module>webapp</module>
        <module>maven-plugin</module>
        <module>bootstrap</module>
        <module>plugins</module>
        <module>integration-tests/hello-world</module>
        <module>integration-tests/custom-app</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/nvdb-vegdata/reststop</url>
        </repository>
    </distributionManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <!-- Internal deps  -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-servlet-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-annotation-processor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-classloader-utils</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.kantega.reststop</groupId>
                <artifactId>reststop-bootstrap</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-webapp</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-servlet</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-statistics-plugin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-security-plugin</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>reststop-jaxrs-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!-- External deps -->
            <dependency>
                <groupId>jakarta.servlet</groupId>
                <artifactId>jakarta.servlet-api</artifactId>
                <version>${jakarta-servlet.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>${jakarta-annotation.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta-validation.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kantega.jexmec</groupId>
                <artifactId>jexmec-manager</artifactId>
                <version>${jexmec.version}</version>
            </dependency>

            <dependency>
                <groupId>org.kantega.jexmec</groupId>
                <artifactId>jexmec-ctor-pl</artifactId>
                <version>${jexmec.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>1.4</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>


            <!-- Test deps-->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.11</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <release>21</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
